# agenty

./: Cargo.toml  Readme.md
src/: agent.rs  error.rs  lib.rs  tool.rs
src/tools/: file.rs  grep.rs  mod.rs
