[package]
name = "agenty"
version = "0.1.0"
edition = "2024"
description = "Agent building utilities"
license = "GPL-2.0-only"
readme = "Readme.md"

[dependencies]
thiserror = "2.0.12"
openai-models = "0.3.6"
color-eyre = "0.6.5"
log = "0.4"
schemars = "0.9.0"
thirtyfour = "=0.35"
glob = "0.3.2"
regex = "1.11.1"
fast_html2md = "0.0.48"
dyn-clone = "1.0.19"
walkdir = "2.5.0"
itertools = "0.14.0"
serde = "1.0"
serde_json = "1.0"
reqwest = { version = "0.12.22", default-features = false, features = ["rustls-tls", "http2", "system-proxy"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
hxd = "0.1.3"
tokio = { version = "1.45.1", features = ["full"] }
grep = "0.3.2"